--- a/week10/disaster-1week10.ipynb
+++ b/week10/disaster-1week10.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "7e4c14ea",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
          "type": "float"
         }
        ],
-       "ref": "2e6dc51f-33fb-4665-94a8-0582a4d5c2fa",
+       "ref": "48e3a6f4-4e6b-4ffd-a4c9-8dfcfd933341",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4      40.3       43.1        1900         140.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "45e4fb6c",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "1548c2cf",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
          "type": "integer"
         }
        ],
-       "ref": "8ae557a6-f673-41cc-9485-3f63cd581653",
+       "ref": "22c1675d-6c2b-48ea-9674-8af37225264f",
        "rows": [
         [
          "1900",
@@ -444,7 +444,7 @@
        "Name: Disaster Type, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "138dcd84",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "16427580",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "b406626f",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "id": "42377f13",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "id": "d7e45f93",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "id": "4ea5870e",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "id": "9f5d17a1",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "id": "7f3ff5b8",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "id": "fbb05f6d",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
          "type": "integer"
         }
        ],
-       "ref": "7a61827e-2f9e-4266-bb32-93be180f857b",
+       "ref": "4492c10b-22ad-4185-a141-0cd92af36762",
        "rows": [
         [
          "0",
@@ -1024,7 +1024,7 @@
        "4   China    Earthquake        1909      1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "id": "622b1e03",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "871c38ed",
    "metadata": {},
    "outputs": [],
@@ -1117,14 +1117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "id": "8b0969d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "068f644115d2499ab60f8c903cb6736a",
+       "model_id": "cd07e7b849ec4d00ade38aab757025aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1233,14 +1233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "6fbe60d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acaffc25abb6486886453bd30759c419",
+       "model_id": "a52dc8937c6542ed88e68e6bb2e31492",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1257,7 +1257,7 @@
        "<function __main__.plot_ranking(year, disaster)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,10 +1350,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca17787",
+   "id": "bea3810d",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/a250822k-coder/-me/week10/HEAD?labpath=disaster_part2.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/a250822k-coder/me/HEAD?labpath=week10/1.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3929c762",
+   "metadata": {},
+   "source": [
+    "#まとめ\n",
+    "今日は EM-DAT の災害データを使って、\n",
+    "自作関数でデータ集計を行い、\n",
+    "for ループで複数の災害タイプを自動的に可視化するワークフローを作りました！\n",
+    "「関数 + ループ」の組み合わせは、データ分析の自動化にとても強力だということを\n",
+    "実感できた回でした。次回はこの仕組みを発展させて、\n",
+    "より複雑な分析にも挑戦してみたいと思います！"
    ]
   }
  ],
