--- a/week10/disaster-1week10.ipynb
+++ b/week10/disaster-1week10.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "id": "7e4c14ea",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
          "type": "float"
         }
        ],
-       "ref": "48e3a6f4-4e6b-4ffd-a4c9-8dfcfd933341",
+       "ref": "7bb6f47b-6f3b-41eb-acb7-8883931b7714",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4      40.3       43.1        1900         140.0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "id": "45e4fb6c",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "id": "1548c2cf",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
          "type": "integer"
         }
        ],
-       "ref": "22c1675d-6c2b-48ea-9674-8af37225264f",
+       "ref": "9666cd2c-047a-4f50-ae97-ebd43f6e2118",
        "rows": [
         [
          "1900",
@@ -444,7 +444,7 @@
        "Name: Disaster Type, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "id": "138dcd84",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "id": "16427580",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "id": "b406626f",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "id": "42377f13",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "id": "d7e45f93",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "id": "4ea5870e",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "id": "9f5d17a1",
    "metadata": {},
    "outputs": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "id": "7f3ff5b8",
    "metadata": {},
    "outputs": [],
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "id": "fbb05f6d",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
          "type": "integer"
         }
        ],
-       "ref": "4492c10b-22ad-4185-a141-0cd92af36762",
+       "ref": "8f48fd28-fb2f-4d2c-9783-ee548a82509d",
        "rows": [
         [
          "0",
@@ -1024,7 +1024,7 @@
        "4   China    Earthquake        1909      1"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "id": "622b1e03",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "id": "871c38ed",
    "metadata": {},
    "outputs": [],
@@ -1117,14 +1117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "id": "8b0969d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd07e7b849ec4d00ade38aab757025aa",
+       "model_id": "78329e98d48e408b887e8ad862fea303",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1233,14 +1233,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "id": "6fbe60d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a52dc8937c6542ed88e68e6bb2e31492",
+       "model_id": "3780665086ed4e1a952a61e8037feefd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1257,7 +1257,7 @@
        "<function __main__.plot_ranking(year, disaster)>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,10 +1350,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea3810d",
+   "id": "6a0f4396",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/a250822k-coder/me/HEAD?labpath=week10/1.ipynb)\n"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/a250822k-coder/me/HEAD?labpath=week10/disaster-1week10.ipynb.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e09310b",
+   "metadata": {},
+   "source": [
+    "わかりやすく、表示することができました。\n",
+    "また、これによってトルコが洪水の被害が意外と多いことが分かった。"
    ]
   },
   {
